[MD settings] drawer menu icon into title bar; icon colors

This CL fixes the side nav drawer menu icon to appear within
the title bar.  This also adds the internal search input and
icon (though doesn't implement internal search).  Other icon
color fixes are made in the side nav and site settings cookie
icons.

BUG=599657, 598892, 597862

Review URL: https://codereview.chromium.org/1880063004

Cr-Commit-Position: refs/heads/master@{#387651}

Former-commit-id: c80526b8ba29a72abe4bee22d1351a1798dd87e0